# CodingAssessment2025.07

./: .gitignore
.github/workflows/: ci.yml  sync-branches.yml
Excercise3/: README.md
Excercise3/.github/workflows/: cd.yml  ci.yml
Excercise3/src/core/entities/: card.js
Excercise3/src/core/services/: shuffelServices.js
Excercise3/tests/unit/: card.test.js
csharp/Exercise1/: CodeToReview.txt
java/Exercise1/: CodeToReview.txt
java/Exercise2/: CodeToRefactor.java
javascript/Exercise2/: CodeToRefactor.js
python/Exercise1/: CodeToReview.txt
python/Exercise2/: CodeToRefactor.py  README.md  codeToRefactor.py  main.py  pyproject.toml
python/Exercise2/tests/: codeToRefactor_test.py
ruby/Exercise1/: CodeToReview.txt
ruby/Exercise2/: CodeToRefactor.rb
