[project]
name = "exercise2"
version = "0.1.0"
description = "Exercise 2 - Legacy Code Refactoring"
authors = [
    {name = "Niraj Kumar", email = "Niraj.Kumar006@msd.govt.nz"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]
